...
    if (firstName.text.length < 2) {
      _errorsCount++;
      _errorsCopy['firstName'] = 'O nome deve conter no mínimo 2 caracteres';
    }
    if (firstName.text.isEmpty) {
      _errorsCount++;
      _errorsCopy['firstName'] = 'Por favor, preencha o nome';
    }

    // LastName
    if (lastName.text.length < 2) {
      _errorsCount++;
      _errorsCopy['lastName'] =
...
                    obscureText: true,
                    onEditingComplete: () => _signUp(authStore),
                    textInputAction: TextInputAction.go,
                  ),
                  SizedBox(height: 32),
                  CustomButtonWidget(
                    key: ValueKey('signUpButton'),
                    buttonText: 'Cadastrar',
                    onPressed: () => _signUp(authStore),
                  )
                ],
              ),
            ),
...
